# opencl-examples

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  ex0-vecadd.cpp  ex1-matmat.cpp  ex2-pi.cpp
src/hide/: device_info.cpp
